<resources>
    <string name="app_name">MobileDevelopmentAssign2</string>
    <string name="main_menu">Welcome to the Healthy Eating App!</string>
    <string name="app_logo">app logo</string>
    <string name="welcome_message">Welcome to the healthy eating app!</string>
    <string name="welcome_message_open">Welcome to the Healthy Eating App, an app that helps you keep track of your eating. We have many features such as being able to view our menu, use our calorie calculator, leave feedback or view the company policy.</string>
    <string name="home_nav">Home</string>
    <string name="menu_nav">Menu\n</string>
    <string name="calorie_nav">Calorie Calculator</string>
    <string name="feedback_nav">Feedback</string>
    <string name="policy_nav">Company Policy</string>
    <string name="banner_title">Todays Offers!</string>
    <string name="menu_title">Menu</string>
    <string name="items_title">Items</string>
    <string name="starter_title">Starters</string>
    <string name="mains_title">Main Courses</string>
    <string name="dessert_title">Desserts</string>
    <string name="help_info">How do I view product information?\nSimply tap on any menu item from the main menu screen to view more details including its name, image, and calorie count.\n\nHow do I add an item to the calorie calculator?\nWhile viewing an item\'s details, tap the “Add to Calorie Calculator” button to include it in your daily total. You can view your current calorie total in the Calorie Calculator screen.\n\nWhere can I view company policy?\nYou can find our company policy by tapping the “Company Policy” option from the main navigation menu or the info section on the home screen.\n\nWhere can I leave feedback?\nWe love hearing from you! Tap on “Feedback” in the app menu to share your thoughts or report any issues. Fill out your name, email, and message, then tap Submit.</string>
    <string name="helpBtn_text">Help</string>
    <string name="company_policy_title">Company Policy</string>
    <string name="loadingmessage">Loading...</string>
</resources>