<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BC34A"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="342dp"
        android:layout_height="219dp"
        android:fontFamily="serif"
        android:text="@string/welcome_message_open"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="598dp"
        android:layout_height="90dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="183dp"
        android:background="#409444"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="221dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/welcome_message"
            android:textSize="32sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="41dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/healthyeatingapplogo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_buttons"
        android:layout_width="603dp"
        android:layout_height="87dp"
        android:layout_marginTop="770dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/homeBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#409444"
            android:text="@string/home_nav"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#8BC34A"
            android:textColorLink="#673AB7"
            android:textSize="10sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="635dp" />

        <Button
            android:id="@+id/menuBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#409444"
            android:text="@string/menu_nav"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#8BC34A"
            android:textColorLink="#673AB7"
            android:textSize="10sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/calculatorBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#409444"
            android:text="@string/calorie_nav"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#8BC34A"
            android:textColorLink="#673AB7"
            android:textSize="10sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="315dp"
            tools:layout_editor_absoluteY="635dp" />

        <Button
            android:id="@+id/feedbackBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#409444"
            android:text="@string/feedback_nav"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#8BC34A"
            android:textColorLink="#673AB7"
            android:textSize="10sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="473dp"
            tools:layout_editor_absoluteY="635dp" />

        <Button
            android:id="@+id/policyBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#409444"
            android:text="@string/policy_nav"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#8BC34A"
            android:textColorLink="#673AB7"
            android:textSize="10sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="631dp"
            tools:layout_editor_absoluteY="662dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="419dp"
        android:layout_height="237dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/salad_banner" />

    <TextView
        android:id="@+id/banner_title"
        android:layout_width="263dp"
        android:layout_height="35dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="33dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/banner_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="420dp"
        android:backgroundTint="#8BC34A"
        android:foregroundTint="#4FB453"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton5"
        app:layout_constraintEnd_toStartOf="@+id/imageButton5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton5"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="591dp"
        android:backgroundTint="#8BC34A"
        android:foregroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@android:drawable/ic_media_ff" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="76dp"
        android:layout_height="68dp"
        android:foregroundTint="#009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_alert"
        tools:layout_editor_absoluteY="128dp" />

</androidx.constraintlayout.widget.ConstraintLayout>